syntax = "proto3";
package location;
// Définition du message TV show
message Location {
string id = 1;
string customer_id  = 2;
string start_date  = 3;
string end_date =4;
string price =5;
string  car_id=6;
// Ajouter d'autres champs de données pour les séries TV au besoin
}
// Définition des messages de requête et de réponse pour les méthodes
message GetLocationRequest {
string location_id = 1;
}
message GetLocationResponse {
Location location = 1;
}
message SearchLocationsRequest {
string query = 1;
}
message SearchLocationsResponse {
repeated Location location = 1;
}

message AddLocationRequest {
string customer_id  = 1;
string start_date  = 2;
string end_date =3;
string price =4;
string  car_id=5;
}

message AddLocationResponse {
    Location location = 1;
}
// Définition du service de séries TV
service LocationService {
rpc GetLocation(GetLocationRequest) returns (GetLocationResponse);
rpc SearchLocations(SearchLocationsRequest) returns (SearchLocationsResponse);
rpc AddLocation(AddLocationRequest) returns (AddLocationResponse);

// Ajouter d'autres méthodes au besoin
}